1.07/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: string-generator-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: string-generator-server
  template:
    metadata:
      labels:
        app: string-generator-server
    spec:
      containers:
        - name: string-generator-server
          image: lauraleonilla/string-generator-server:latest
