1.07/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: string-generator-server-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: string-generator-server-srv
          servicePort: 2345
